--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/vue-query": "^5.66.9",
+    "gsap": "^3.12.7",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
